--- a/public/about.html
+++ b/public/about.html
@@ -183,11 +183,40 @@ window.Quarto = {
   </div>
 </header><main class="content" id="quarto-document-content">
 <p>About this blog named <em>goodrock</em> having <em>listing of posts.</em></p>
+<p>For web performance, Netlify is preferred over Github Pages.</p>
 
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bible" data-listing-date-sort="1735344000000" data-listing-file-modified-sort="1737649437326" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
+<div class="quarto-post image-right" data-index="0" data-categories="bible" data-listing-date-sort="1737590400000" data-listing-file-modified-sort="1743447841865" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="20">
+<div class="thumbnail">
+<p><a href="./posts/mapStorage/index.html" class="no-external"></a></p><a href="./posts/mapStorage/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/mapStorage/brain.jpg" class="thumbnail-image"></p>
+</a><p><a href="./posts/mapStorage/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/mapStorage/index.html" class="no-external">mapStorage</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/mapStorage/index.html" class="no-external"></a>
+</div>
+<div class="listing-description">
+<a href="./posts/mapStorage/index.html" class="no-external">powered by the logic of _fast_mvc.js_ and the api from ’https://jsfapi.netlify.app/.netlify/functions/bgw’;</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/mapStorage/index.html" class="no-external">
+<div class="listing-date">
+Jan 23, 2025
+</div>
+<div class="listing-author">
+granPiero
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="bible" data-listing-date-sort="1735344000000" data-listing-file-modified-sort="1737649437326" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
 <div class="thumbnail">
 <p><a href="./posts/memo_verse/index.html" class="no-external"></a></p><a href="./posts/memo_verse/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/memo_verse/brain.jpg" class="thumbnail-image"></p>
@@ -215,27 +244,27 @@ granPiero
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="bible" data-listing-date-sort="1737590400000" data-listing-file-modified-sort="1740847785704" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
+<div class="quarto-post image-right" data-index="2" data-categories="bible" data-listing-date-sort="1743465600000" data-listing-file-modified-sort="1743450044305" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="28">
 <div class="thumbnail">
-<p><a href="./posts/mapStorage/index.html" class="no-external"></a></p><a href="./posts/mapStorage/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/mapStorage/brain.jpg" class="thumbnail-image"></p>
-</a><p><a href="./posts/mapStorage/index.html" class="no-external"></a></p>
+<p><a href="./posts/verseWorker/index.html" class="no-external"></a></p><a href="./posts/verseWorker/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/verseWorker/brain.jpg" class="thumbnail-image"></p>
+</a><p><a href="./posts/verseWorker/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/mapStorage/index.html" class="no-external">mapStorage</a>
+<a href="./posts/verseWorker/index.html" class="no-external">verseWorker</a>
 </h3>
 <div class="listing-subtitle">
-<a href="./posts/mapStorage/index.html" class="no-external"></a>
+<a href="./posts/verseWorker/index.html" class="no-external"></a>
 </div>
 <div class="listing-description">
-<a href="./posts/mapStorage/index.html" class="no-external">Now based on fast_mvc.js rather than mvc2.js and class Refs instead of mapStorage.</a>
+<a href="./posts/verseWorker/index.html" class="no-external">MEMORIZE on the fly your <strong>bible references</strong> in one persistent sandbox per browser and domain. Cloudflare WORKER API targeted by <em>mvc_worker.js</em>. cf ’https://bg_worker.pjafischer.…</a>
 </div>
 </div>
 <div class="metadata">
-<a href="./posts/mapStorage/index.html" class="no-external">
+<a href="./posts/verseWorker/index.html" class="no-external">
 <div class="listing-date">
-Jan 23, 2025
+Apr 1, 2025
 </div>
 <div class="listing-author">
 granPiero
@@ -243,7 +272,7 @@ granPiero
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="news" data-listing-date-sort="1712448000000" data-listing-file-modified-sort="1737288314419" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
+<div class="quarto-post image-right" data-index="3" data-categories="news" data-listing-date-sort="1712448000000" data-listing-file-modified-sort="1737288314419" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
 <div class="thumbnail">
 <p><a href="./posts/welcome/index.html" class="no-external"></a></p><a href="./posts/welcome/index.html" class="no-external">
 <p class="card-img-top"><img src="posts/welcome/thumbnail.jpg"  class="thumbnail-image card-img"/></p>
@@ -271,7 +300,7 @@ Tristan O’Malley
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="news,code,analysis" data-listing-date-sort="1712707200000" data-listing-file-modified-sort="1737288314419" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="4" data-categories="news,code,analysis" data-listing-date-sort="1712707200000" data-listing-file-modified-sort="1743448165475" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="12">
 <div class="thumbnail">
 <p><a href="./posts/post-with-code/index.html" class="no-external"></a></p><a href="./posts/post-with-code/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/post-with-code/image.jpg" class="thumbnail-image"></p>
@@ -295,62 +324,6 @@ Apr 10, 2024
 </div>
 <div class="listing-author">
 Harlow Malloc
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="4" data-categories="bible" data-listing-date-sort="1737590400000" data-listing-file-modified-sort="1737736431928" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="26">
-<div class="thumbnail">
-<p><a href="./posts/memo_verse_dev/index.html" class="no-external"></a></p><a href="./posts/memo_verse_dev/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/memo_verse_dev/brain.jpg" class="thumbnail-image"></p>
-</a><p><a href="./posts/memo_verse_dev/index.html" class="no-external"></a></p>
-</div>
-<div class="body">
-<h3 class="no-anchor listing-title">
-<a href="./posts/memo_verse_dev/index.html" class="no-external">memo_verse_DEV</a>
-</h3>
-<div class="listing-subtitle">
-<a href="./posts/memo_verse_dev/index.html" class="no-external"></a>
-</div>
-<div class="listing-description">
-<a href="./posts/memo_verse_dev/index.html" class="no-external">This is <em>on-your-device-only-persistent-memory</em> of <strong>bible references,</strong> that you accumulate on the fly. <em>However one distinct memory zone per browser</em> TODO: use cachedMap althrough</a>
-</div>
-</div>
-<div class="metadata">
-<a href="./posts/memo_verse_dev/index.html" class="no-external">
-<div class="listing-date">
-Jan 23, 2025
-</div>
-<div class="listing-author">
-granPiero
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="5" data-categories="bible" data-listing-date-sort="1737590400000" data-listing-file-modified-sort="1743273153177" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="10">
-<div class="thumbnail">
-<p><a href="./posts/verseWorker/index.html" class="no-external"></a></p><a href="./posts/verseWorker/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/verseWorker/brain.jpg" class="thumbnail-image"></p>
-</a><p><a href="./posts/verseWorker/index.html" class="no-external"></a></p>
-</div>
-<div class="body">
-<h3 class="no-anchor listing-title">
-<a href="./posts/verseWorker/index.html" class="no-external">verseWorker</a>
-</h3>
-<div class="listing-subtitle">
-<a href="./posts/verseWorker/index.html" class="no-external"></a>
-</div>
-<div class="listing-description">
-<a href="./posts/verseWorker/index.html" class="no-external">Now based on mvc_worker.js instead of mapStorage.</a>
-</div>
-</div>
-<div class="metadata">
-<a href="./posts/verseWorker/index.html" class="no-external">
-<div class="listing-date">
-Jan 23, 2025
-</div>
-<div class="listing-author">
-granPiero
 </div>
 </a>
 </div>
