--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(6)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bible">bible <span class="quarto-category-count">(4)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(5)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bible">bible <span class="quarto-category-count">(3)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -203,73 +203,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bible" data-listing-date-sort="1737590400000" data-listing-file-modified-sort="1740847785704" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="22">
-<div class="thumbnail">
-<p><a href="./posts/mapStorage/index.html" class="no-external"></a></p><a href="./posts/mapStorage/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/mapStorage/brain.jpg" class="thumbnail-image"></p>
-</a><p><a href="./posts/mapStorage/index.html" class="no-external"></a></p>
-</div>
-<div class="body">
-<h3 class="no-anchor listing-title">
-<a href="./posts/mapStorage/index.html" class="no-external">mapStorage</a>
-</h3>
-<div class="listing-subtitle">
-<a href="./posts/mapStorage/index.html" class="no-external"></a>
-</div>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('bible'); return false;">
-bible
-</div>
-</div>
-<div class="listing-description">
-<a href="./posts/mapStorage/index.html" class="no-external">Now based on fast_mvc.js rather than mvc2.js and class Refs instead of mapStorage.</a>
-</div>
-</div>
-<div class="metadata">
-<a href="./posts/mapStorage/index.html" class="no-external">
-<div class="listing-date">
-Jan 23, 2025
-</div>
-<div class="listing-author">
-granPiero
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="1" data-categories="bible" data-listing-date-sort="1737590400000" data-listing-file-modified-sort="1737736431928" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="26">
-<div class="thumbnail">
-<p><a href="./posts/memo_verse_dev/index.html" class="no-external"></a></p><a href="./posts/memo_verse_dev/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/memo_verse_dev/brain.jpg" class="thumbnail-image"></p>
-</a><p><a href="./posts/memo_verse_dev/index.html" class="no-external"></a></p>
-</div>
-<div class="body">
-<h3 class="no-anchor listing-title">
-<a href="./posts/memo_verse_dev/index.html" class="no-external">memo_verse_DEV</a>
-</h3>
-<div class="listing-subtitle">
-<a href="./posts/memo_verse_dev/index.html" class="no-external"></a>
-</div>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('bible'); return false;">
-bible
-</div>
-</div>
-<div class="listing-description">
-<a href="./posts/memo_verse_dev/index.html" class="no-external">This is <em>on-your-device-only-persistent-memory</em> of <strong>bible references,</strong> that you accumulate on the fly. <em>However one distinct memory zone per browser</em> TODO: use cachedMap althrough</a>
-</div>
-</div>
-<div class="metadata">
-<a href="./posts/memo_verse_dev/index.html" class="no-external">
-<div class="listing-date">
-Jan 23, 2025
-</div>
-<div class="listing-author">
-granPiero
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="2" data-categories="bible" data-listing-date-sort="1737590400000" data-listing-file-modified-sort="1743273153177" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="10">
+<div class="quarto-post image-right" data-index="0" data-categories="bible" data-listing-date-sort="1743465600000" data-listing-file-modified-sort="1743450044305" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="28">
 <div class="thumbnail">
 <p><a href="./posts/verseWorker/index.html" class="no-external"></a></p><a href="./posts/verseWorker/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/verseWorker/brain.jpg" class="thumbnail-image"></p>
@@ -288,11 +222,44 @@ bible
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/verseWorker/index.html" class="no-external">Now based on mvc_worker.js instead of mapStorage.</a>
+<a href="./posts/verseWorker/index.html" class="no-external">MEMORIZE on the fly your <strong>bible references</strong> in one persistent sandbox per browser and domain. Cloudflare WORKER API targeted by <em>mvc_worker.js</em>. cf ’https://bg_worker.pjafischer.…</a>
 </div>
 </div>
 <div class="metadata">
 <a href="./posts/verseWorker/index.html" class="no-external">
+<div class="listing-date">
+Apr 1, 2025
+</div>
+<div class="listing-author">
+granPiero
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="bible" data-listing-date-sort="1737590400000" data-listing-file-modified-sort="1743447841865" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="20">
+<div class="thumbnail">
+<p><a href="./posts/mapStorage/index.html" class="no-external"></a></p><a href="./posts/mapStorage/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/mapStorage/brain.jpg" class="thumbnail-image"></p>
+</a><p><a href="./posts/mapStorage/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/mapStorage/index.html" class="no-external">mapStorage</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/mapStorage/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('bible'); return false;">
+bible
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/mapStorage/index.html" class="no-external">powered by the logic of _fast_mvc.js_ and the api from ’https://jsfapi.netlify.app/.netlify/functions/bgw’;</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/mapStorage/index.html" class="no-external">
 <div class="listing-date">
 Jan 23, 2025
 </div>
@@ -302,7 +269,7 @@ granPiero
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="bible" data-listing-date-sort="1735344000000" data-listing-file-modified-sort="1737649437326" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
+<div class="quarto-post image-right" data-index="2" data-categories="bible" data-listing-date-sort="1735344000000" data-listing-file-modified-sort="1737649437326" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
 <div class="thumbnail">
 <p><a href="./posts/memo_verse/index.html" class="no-external"></a></p><a href="./posts/memo_verse/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/memo_verse/brain.jpg" class="thumbnail-image"></p>
@@ -335,7 +302,7 @@ granPiero
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-categories="news,code,analysis" data-listing-date-sort="1712707200000" data-listing-file-modified-sort="1737288314419" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="3" data-categories="news,code,analysis" data-listing-date-sort="1712707200000" data-listing-file-modified-sort="1743448165475" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="12">
 <div class="thumbnail">
 <p><a href="./posts/post-with-code/index.html" class="no-external"></a></p><a href="./posts/post-with-code/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/post-with-code/image.jpg" class="thumbnail-image"></p>
@@ -374,7 +341,7 @@ Harlow Malloc
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-categories="news" data-listing-date-sort="1712448000000" data-listing-file-modified-sort="1737288314419" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
+<div class="quarto-post image-right" data-index="4" data-categories="news" data-listing-date-sort="1712448000000" data-listing-file-modified-sort="1737288314419" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
 <div class="thumbnail">
 <p><a href="./posts/welcome/index.html" class="no-external"></a></p><a href="./posts/welcome/index.html" class="no-external">
 <p class="card-img-top"><img src="posts/welcome/thumbnail.jpg"  class="thumbnail-image card-img"/></p>
