--- a/public/about.html
+++ b/public/about.html
@@ -244,7 +244,7 @@ granPiero
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="bible" data-listing-date-sort="1743465600000" data-listing-file-modified-sort="1743450044305" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="28">
+<div class="quarto-post image-right" data-index="2" data-categories="bible" data-listing-date-sort="1743465600000" data-listing-file-modified-sort="1743495129842" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
 <div class="thumbnail">
 <p><a href="./posts/verseWorker/index.html" class="no-external"></a></p><a href="./posts/verseWorker/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/verseWorker/brain.jpg" class="thumbnail-image"></p>
@@ -258,7 +258,7 @@ granPiero
 <a href="./posts/verseWorker/index.html" class="no-external"></a>
 </div>
 <div class="listing-description">
-<a href="./posts/verseWorker/index.html" class="no-external">MEMORIZE on the fly your <strong>bible references</strong> in one persistent sandbox per browser and domain. Cloudflare WORKER API targeted by <em>mvc_worker.js</em>. cf ’https://bg_worker.pjafischer.…</a>
+<a href="./posts/verseWorker/index.html" class="no-external">MEMORIZE on the fly your <strong>bible references</strong> in one persistent sandbox <em>per browser and domain</em>. Cloudflare WORKER API targeted by <em>mvc_worker.js</em>. cf ’https://bg_worker.pjafischer.…</a>
 </div>
 </div>
 <div class="metadata">
