--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(5)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bible">bible <span class="quarto-category-count">(3)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(6)</span></div><div class="category" data-category="analysis">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bible">bible <span class="quarto-category-count">(4)</span></div><div class="category" data-category="code">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="news">news <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -203,7 +203,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bible" data-listing-date-sort="1743465600000" data-listing-file-modified-sort="1743495129842" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
+<div class="quarto-post image-right" data-index="0" data-categories="bible" data-listing-date-sort="1743465600000" data-listing-file-modified-sort="1743659994555" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
 <div class="thumbnail">
 <p><a href="./posts/verseWorker/index.html" class="no-external"></a></p><a href="./posts/verseWorker/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/verseWorker/brain.jpg" class="thumbnail-image"></p>
@@ -269,7 +269,40 @@ granPiero
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="bible" data-listing-date-sort="1735344000000" data-listing-file-modified-sort="1737649437326" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
+<div class="quarto-post image-right" data-index="2" data-categories="bible" data-listing-date-sort="1735344000000" data-listing-file-modified-sort="1743673873918" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="7">
+<div class="thumbnail">
+<p><a href="./posts/check_this/index.html" class="no-external"></a></p><a href="./posts/check_this/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/check_this/brain.jpg" class="thumbnail-image"></p>
+</a><p><a href="./posts/check_this/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/check_this/index.html" class="no-external">check_this</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/check_this/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('bible'); return false;">
+bible
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/check_this/index.html" class="no-external">This checks your localStorage</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/check_this/index.html" class="no-external">
+<div class="listing-date">
+Dec 28, 2024
+</div>
+<div class="listing-author">
+granPiero
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="3" data-categories="bible" data-listing-date-sort="1735344000000" data-listing-file-modified-sort="1737649437326" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="25">
 <div class="thumbnail">
 <p><a href="./posts/memo_verse/index.html" class="no-external"></a></p><a href="./posts/memo_verse/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/memo_verse/brain.jpg" class="thumbnail-image"></p>
@@ -302,7 +335,7 @@ granPiero
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="news,code,analysis" data-listing-date-sort="1712707200000" data-listing-file-modified-sort="1743448165475" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="12">
+<div class="quarto-post image-right" data-index="4" data-categories="news,code,analysis" data-listing-date-sort="1712707200000" data-listing-file-modified-sort="1743448165475" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="12">
 <div class="thumbnail">
 <p><a href="./posts/post-with-code/index.html" class="no-external"></a></p><a href="./posts/post-with-code/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/post-with-code/image.jpg" class="thumbnail-image"></p>
@@ -341,7 +374,7 @@ Harlow Malloc
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-categories="news" data-listing-date-sort="1712448000000" data-listing-file-modified-sort="1737288314419" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
+<div class="quarto-post image-right" data-index="5" data-categories="news" data-listing-date-sort="1712448000000" data-listing-file-modified-sort="1737288314419" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
 <div class="thumbnail">
 <p><a href="./posts/welcome/index.html" class="no-external"></a></p><a href="./posts/welcome/index.html" class="no-external">
 <p class="card-img-top"><img src="posts/welcome/thumbnail.jpg"  class="thumbnail-image card-img"/></p>
